language switch german-english  ---Most of the translated resource documents have been completed.